--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,18 +1,19 @@
 [toolchain]
 package_manager = "yarn"
+anchor_version = "0.30.1"
 
 [features]
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 gamevault = "6wTDjykpx8e2LebgR7shGFaU9Xh57aSZGXmyqgF2ctsG"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "https://api.devnet.solana.com"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
