--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,15 +6,18 @@ anchor_version = "0.30.1"
 resolution = true
 skip-lint = false
 
-[programs.devnet]
+[programs.localnet]
 gamevault = "6wTDjykpx8e2LebgR7shGFaU9Xh57aSZGXmyqgF2ctsG"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "https://api.devnet.solana.com"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
+
+[test]
+startup_wait = 20000000
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
