--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,23 +1,30 @@
 [toolchain]
+anchor_version = "0.31.1"
 package_manager = "yarn"
-anchor_version = "0.30.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-gamevault = "6wTDjykpx8e2LebgR7shGFaU9Xh57aSZGXmyqgF2ctsG"
+gamevault = "9h99ZKZpprYZn2xaBEQC2R62BJCCYFMg7XEjTDzqAxk5"
 
 [registry]
-url = "https://api.apr.dev"
+url = "https://devnet.helius-rpc.com/?api-key=772d2554-bd09-4e57-b900-9fe7da319f1d"
 
 [provider]
 cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
-[test]
-startup_wait = 20000000
-
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[test.validator]
+[[test.validator.bpf_program]]
+program-id = "rec5EKMGg6MxZYaMdyBfgwp4d5rB9T1VQH5pJv5LtFJ"
+path = "tests/fixtures/mock_pyth_pull.so"
+
+[test]
+startup_wait = 20000000
+shutdown_wait = 2000
+upgradeable = false
