--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [workspace]
-members = [
-    "programs/*"
-]
+members = ["programs/*"]
 resolver = "2"
+
+[workspace.dependencies]
+anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
+bytemuck = "1.20.0"
 
 [profile.release]
 overflow-checks = true
@@ -12,3 +15,7 @@ codegen-units = 1
 opt-level = 3
 incremental = false
 codegen-units = 1
+
+
+
+
