--- a/programs/gamevault/Cargo.toml
+++ b/programs/gamevault/Cargo.toml
@@ -17,5 +17,6 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
-anchor-spl = "0.30.1"
+anchor-lang = { workspace = true, features = ["init-if-needed"] }
+anchor-spl = { workspace = true }
+cp-amm = { path = "/home/elmo/meteora-cp-amm/programs/cp-amm", features = ["cpi"] }
